# NILScript

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  IMPLEMENTATIONS.md  LICENSE  MAINTAINERS  MANIFEST.in  README.md  SECURITY.md  VERSIONING.md  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: adapter-submission.yml  bug.yml  config.yml
.github/workflows/: ci.yml  parity.yml
bench/: README.md
bench/safety/: injecagent_runner.py  matrix.json
demo/: demo_ui.py
deploy/: Dockerfile.mcp
docs/: NIL-paper-additions.md  NIL-structural-integrity-report.md  adapter-ecosystem-strategy.md  attestation-design.md  benchmarking-plan.md  connect-claude.md  contributing-an-adapter.md  mcp-server-plan.md  nilscript-kernel-extraction-plan.md  refusal-recovery.md  saas-grade-content-plan.md  scope-and-non-goals.md
docs/brand/: messaging.md
examples/plans/: create-product.nil.json
examples/pocketbase-adapter/conformance/: test_approval_ceiling.py  (+1 more)
scripts/: parity.sh
src/nilscript/: __init__.py  governance_quota.py
tests/: conftest.py  test_automation_ui.py  test_breaker.py  test_ceilings.py  test_cli_toolkit.py  test_cli_tools.py  test_client.py  test_conformance_runner.py  test_contract.py  test_controlplane.py  test_cp_provisioning.py  test_cycle_nil.py  test_cycle_projections.py  test_cycle_registry_symbols.py  test_dsl_compensation.py  test_event_proposal_validation.py  test_events.py  test_grants.py  test_idempotency.py  test_kernel_executor.py  test_kernel_validator.py  test_manifest.py  test_mcp_dynamic.py  test_mcp_e2e.py  test_mcp_gate.py  test_mcp_server.py  test_mcp_tools.py  test_registry_memory.py  test_repair.py  test_rollback.py  test_saas_tenant_management.py  test_scaffold.py  test_scan_inference.py  test_sentences.py  test_transport.py  test_witness.py
(+138 files in other folders)
